samples/_failures_safe/1761071086_d2f35c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e2ba858d.c: In function ‘main’:
./samples/SAFE/__tmp_e2ba858d.c:156:20: error: missing terminating " character
  156 |             printf("Invalid edge parameters
      |                    ^~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_e2ba858d.c:156:13: error: expected expression at end of input
  156 |             printf("Invalid edge parameters
      |             ^~~~~~
./samples/SAFE/__tmp_e2ba858d.c:156:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e2ba858d.c:156:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e2ba858d.c:156:13: error: expected declaration or statement at end of input
